# Opencontroller

./: .gitignore  Cargo.toml  LICENSE  README.md  UI-Prototyp-2025-03-07-1250.excalidraw  codesnippets .rs
src/: config.rs  main.rs  ui.rs
src/controller/: controller.rs  controller_handle.rs  event_collector.rs  event_processor.rs  mod.rs
src/mapping/: custom.rs  elrs.rs  engine.rs  error.rs  keyboard.rs  manager.rs  mapping_config.rs  mapping_engine.rs  mapping_handle.rs  mapping_strategy.rs  mapping_types.rs  mod.rs  strategy.rs
src/mqtt/: config.rs  message_manager.rs  mod.rs  mqtt_handler.rs
src/persistence/: config_portal.rs  mod.rs  persistence_worker.rs  session_client.rs
src/ui/: common.rs  elrs_menu.rs  main_menu.rs  mod.rs  mqtt_menu.rs  settings_menu.rs
