[package]
name = "opencontroller"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crsf = "2.0.1"

gilrs = "0.11.0"
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = "0.12.1"
rppal = "0.22.1"
rumqttc = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
statum = "0.1.48"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["tracing"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
